[tool.poetry]
name = "iv"
version = "0.1.0"
description = ""
authors = ["wilfred11 <wilfredvancasteren@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pywhy = "=0.1.0"
patsy = "^1.0.1"
networkx = "2.8.5"
sympy = "^1.14.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
